# mkname

./: MKNAME  add.cabal
src/: Add.hs
