name:               add
version:            0.0.1
cabal-version:      >= 1.10
build-type:         Custom

library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Add

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
